ui/css/module/_listitem.scss
.node-list-item {
  @extend .clearfix;
  margin-bottom: 8px;

  .list-item-marker {
    @include font-san-serif-bold();
    @include paragraph-marker();
  }

  .list-item-text {
    @include paragraph-with-marker();
  }
}

.node-paragraph {
  .list-item-marker,
  .list-item-text {
    line-height: 1.69rem;
  }

  .list-item-marker {
    font-size: .9rem;
  }
}

